# sotc

./: CMakeLists.txt  LICENSE  README
cmake/: FindTinyXML.cmake
tools/: CMakeLists.txt
tools/animation/: Animation.cpp  CMakeLists.txt
tools/model/: CMakeLists.txt  Entry.h  Model.cpp  Model.h  Parser.h  Surface.h  Vertex.cpp  Writer.cpp
tools/nto/: CMakeLists.txt  Nto.cpp  Nto.h
tools/ntoconvert/: CMakeLists.txt  Nto.cpp
tools/skeleton/: CMakeLists.txt  Skeleton.cpp  Skeleton.h  Writer.cpp
tools/xff/: CMakeLists.txt  Xff.hpp
tools/xff2ogrexml/: CMakeLists.txt  Entry.cpp  Entry.h  Parser.cpp  SectionHeader.h  Surface.cpp  Surface.h  Texture.h  Vertex.cpp  Vertex.h  Writer.cpp  Writer.h  Xff.cpp  Xff.h  XmlOut.cpp  XmlOut.h  tinyxml.cpp  tinyxml.h
